2002-07-18  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-part.c (set_disposition): Fix to parse the disposition
	parameter values rather than assuming it is only the "attachment"
	or "inline" part of the value.

2002-07-14  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: check for gmtime_r

	* gmime-utils.c (g_mime_utils_header_format_date): Use gmtime_r() if
	we have this function available to us.

	* gmime-parser.c (parser_step_from): Save the From-line offset.
	(g_mime_parser_get_from_offset): Newly implemented function used
	for retrieving the offset of the From-line (for use when parsing
	mbox files).

2002-07-11  Jeffrey Stedfast  <fejj@ximian.com>

	* strlib.c (strlcpy): Changed to behave the same as the Solaris
	strlcpy function.
	(strlcat): Changed to behave the same as the Solaris strlcat
	function.

2002-07-04  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv-utils.c (g_mime_iconv_strndup): Fix for
	nul-terminating some multibyte charsets.

2002-06-28  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-gpg-context.c (gpg_ctx_op_step): If we get an EOF from the
	status-fd, then set gpg->complete to TRUE.
	(gpg_ctx_get_argv): Use --charset=UTF-8 and --keyserver-options to
	disable auto-key-retrieve rather than the deprecated
	--no-auto-key-retrieve flag.

2002-06-27  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-gpg-context.c (gpg_ctx_op_step): Loop on our reads while
	errno is EINTR or EAGAIN. Also make sure to completely read stdout
	and stderr by keeping better state.
	(gpg_ctx_parse_status): If we encounted a NODATA error from gpg
	and we have diagnostics output, use that as the exception string.
	(gpg_ctx_op_exited): New function to determine if the gpg process
	has exited.
	(gpg_ctx_op_wait): Reuse any exit status information from
	gpg_ctx_op_exited().
	(gpg_verify): Check that the gpg process has not exited each loop.

2002-06-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-multipart-signed.c (g_mime_multipart_signed_sign): Once