@@ -1,3 +1,8 @@
+2002-07-19  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime-iconv-utils.c (g_mime_iconv_strndup): Fix a logic mistake
+	in the calculation of the number of bytes converted.
+
 2002-07-18  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime-part.c (set_disposition): Fix to parse the disposition
